src/Test/ElementLayout/FeatureTests/TestData/XAML/TestCases/NegativeMargins/NegMarginGrid.xaml
<Grid Name="root" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" ShowGridLines="true">

	<Grid
  HorizontalAlignment="Left"
  VerticalAlignment="Top"
  Height="450"
  Width="450"
  Background="yellow"
  Margin="-50">
		<Grid.ColumnDefinitions>
		<ColumnDefinition />
		<ColumnDefinition />
		<ColumnDefinition />
		</Grid.ColumnDefinitions>
		<Grid.RowDefinitions>
		<RowDefinition />
		<RowDefinition />
		<RowDefinition />
		</Grid.RowDefinitions>


		<Button Grid.Row="0" Grid.Column="0" />
		<Button Grid.Row="1" Grid.Column="0" />
		<Button Grid.Row="2" Grid.Column="0" />
		<Button Grid.Row="0" Grid.Column="1" />
		<Button Grid.Row="1" Grid.Column="1" />
		<Button Grid.Row="2" Grid.Column="1" />
		<Button Grid.Row="0" Grid.Column="2" />
		<Button Grid.Row="1" Grid.Column="2" />
		<Button Grid.Row="2" Grid.Column="2" />

	</Grid>

</Grid>
